# slingshot

./: Cargo.toml  Makefile  README.md  demo.tape
.github/: \
.github/workflows/: build.yml  ci.yml
Formula/: slingshot.rb
assets/: test_file.txt
conf.d/: slingshot.fish
src/: event_handler.rs  file.rs  main.rs  state_handler.rs  styles.rs
