[package]
name = "slingshot-term"
version = "0.3.0"
authors = ["Caio Ishikawa <caio.ishikawa@proton.me"]
edition = "2021"
license = "MIT"
description = "Lightweight command line tool to quickly navigate across folders."

[[bin]]
name = "slingshot"
path = "src/main.rs"

[dependencies]
crossterm = "0.26.1"
phf = {version = "0.11", features=["macros"]}
